--- a/about/index.html
+++ b/about/index.html
@@ -29,16 +29,20 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <figure>
+        <a href="..index.html">
+          <img src="..img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider">
       </div>
-    <nav>
-      <ul>
-        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-        <li><a href="about.index.html" target="_blank">About</a></li>
-      </ul>
-    </nav>
-  </div>
+      <nav>
+        <ul>
+        <li><a href="..faq/index.html">FAQ</a></li>
+        <li><a href="index.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -120,7 +124,6 @@
                 <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
               </p>
             </div>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
             <!-- other social links here -->
           </div>
         </div>
