--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <figure>
+        <a href="#">
+        <img src="img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider">
       </div>
-    <nav>
-      <ul>
-        <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-        <li><a href="about.index.html" target="_blank">About</a></li>
-      </ul>
-    </nav>
-  </div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html">FAQ</a></li>
+          <li><a href="about/index.html">About</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -58,7 +62,8 @@
       <div class="content-wrapper">
        <div class="form-description">
         <h3> Want to join the next retreat?</h3>
-        <p> Find out when we are holding our next retreat and how your company or team can sign up!
+        <p> 
+          Find out when we are holding our next retreat and how your company or team can sign up!
         </p>
        </div>
        <div class="form">
@@ -73,6 +78,13 @@
       <div class="content-wrapper">
         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
         <div class="features-items">
+          <article>
+            <p class="fontawesome-icon">
+            </p>
+            <p class="features-item-description">
+              Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+            </p>
+          </article>
           <article>
             <p class="fontawesome-icon">
             </p>
@@ -116,6 +128,9 @@
       <div class="content-wrapper">
         <h2> Be a better team in 5 days. like this one.</h2>
         <article>
+          <figure>
+            <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of people standing together outside">
+          </figure>
           <div>
             <h3>LaCrue Bottling Co. October 2018</h3>
             <p>
@@ -140,21 +155,24 @@
               hello@unplugged.com
             </p>
           </address>
+        </div>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com/Skillcrush" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
+            </p>
           </div>
-          <div class="social">
-            <h4>Social</h4>
-            <div class="social-icons">
-              <p>
-                <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
-              </p>
-              <p>
-                <a href="https://www.twitter.com/Skillcrush" target="_blank"></a>
-              </p>
-              <p>
-                <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
-              </p>
-            </div>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a></p>
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener">
+              </a>
+            </p>
             <!-- other social links here -->
           </div>
         </div>
