--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <script src="https://kit.fontawesome.com/2f18892c1e.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 
   <!-- Google Fonts -->
