--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+              <a href="https://www.facebook.com/Skillcrush/" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </p>
             <p>
-              <a href="https://www.twitter.com/Skillcrush" target="_blank"></a>
+              <a href="https://www.twitter.com/Skillcrush" target="_blank"><i class="fab fa-twitter"></i></a>
             </p>
             <p>
-              <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
+              <a href="https://www.instagram.com/skillcrush" target="_blank"><i class="fab fa-instagram"></i></a>
             </p>
           </div>
             <p>
@@ -182,7 +182,6 @@
               </a>
             </p>
             <!-- other social links here -->
-          </div>
         </div>
       </div> <!-- footer content ends -->
     </div> 
