--- a/about/index.html
+++ b/about/index.html
@@ -32,16 +32,15 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="..index.html">
+        <a href="../index.html">
           <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
       </figure>
-      <div class="header-divider">
-      </div>
+      <div class="header-divider"></div>
       <nav>
         <ul>
-        <li><a href="../faq/index.html">FAQ</a></li>
-        <li><a href="index.html">About</a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -53,51 +52,51 @@
       <div class="content-wrapper">
         <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-          <p> 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
           </p>
           <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
           </p>
         </div>
       </div>
+      <!-- mission content wrapper ends -->
     </section>
 
     <section class="map">
-      <figure> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2936.9017401321557!2d-88.42244978491584!3d42.59982822791916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058beaba2a015f%3A0x4b28e3671bb3e0e9!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1675376418933!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <figure>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.264848877189!2d-88.42986248453636!3d42.59212397917199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbbacb5568f%3A0xac5d9a1fbeb32534!2s333+W+Main+St%2C+Lake+Geneva%2C+WI+53147!5e0!3m2!1sen!2sus!4v1541558469187"
+          width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </figure>
     </section>
 
     <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
-      </div>
-      <div class="contact-content">
-      </div>
-      <div>
-        <h4>General Information</h4>
-        <address>
-          <p>
-            333 Main St. Lake Geneva, WI 53147<br>
-            555-555-5555<br>
-            hello@unplugged.com
-          </p>
-        </address>
-      </div>
-      <div>
-        <h4>Chat with a Facilitator</h4>
-        <address>
-          <p>
-            555-555-5556<br>
-            facilitator@unplugged.com
-          </p>
-        </address>
-      </div>
-      
-
+        <div class="contact-content">
+          <div>
+          <h4>General Information</h4>
+          <address>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+            <address>
+              <p>
+                555-555-5556<br>
+                facilitator@unplugged.com
+              </p>
+            </address>
+          </div>
+          <!-- contact-content div ends -->
+        </div>
+        <!-- contact content wrapper ends -->
+        </div>
     </section>
 
   </main>
